# remove_comment_rs

./: .gitignore  .mypy.ini  Cargo.toml  build.cmd  build.ps1  build_all.cmd  build_py.cmd  config.json  main.py  requirements.txt  requirements_pro.txt  rm.py  run_jupyter.cmd  sample_run.cmd  test_rm.py  vba.py
misc/: macro_sample_001.xlsm  sample_010.ps1  sample_011.ps1  sample_012.ps1  sample_013_shift-jis.ps1  sample_014_utf-8.ps1  utf16le.json
misc/piyo/: sample_002.py
src/: main.rs  ofile.rs  opf.rs  rmc.rs
src/opf/: text.rs  xlsm.rs
src/rmc/: common.rs  ps.rs  py.rs  xlsm.rs
tdoc/: 001_excel_macro.md
