[package]
name = "remove_comment_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
encoding_rs = "0.8.33"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
walkdir = "2.4.0"
